--- a/varia/Makefile.in
+++ b/varia/Makefile.in
@@ -39,24 +39,19 @@ build_triplet = @build@
 host_triplet = @host@
 target_triplet = @target@
 ACLOCAL = @ACLOCAL@
-AMDEP_FALSE = @AMDEP_FALSE@
-AMDEP_TRUE = @AMDEP_TRUE@
 AMTAR = @AMTAR@
 AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
 CC = @CC@
-CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
 CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
 CXX = @CXX@
-CXXDEPMODE = @CXXDEPMODE@
 CXXFLAGS = @CXXFLAGS@
 CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
-DEPDIR = @DEPDIR@
 DYNAMIC_OPT = @DYNAMIC_OPT@
 ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
@@ -109,13 +104,7 @@ Z_LIBS = @Z_LIBS@
 ac_ct_CC = @ac_ct_CC@
 ac_ct_CXX = @ac_ct_CXX@
 ac_ct_STRIP = @ac_ct_STRIP@
-am__fastdepCC_FALSE = @am__fastdepCC_FALSE@
-am__fastdepCC_TRUE = @am__fastdepCC_TRUE@
-am__fastdepCXX_FALSE = @am__fastdepCXX_FALSE@
-am__fastdepCXX_TRUE = @am__fastdepCXX_TRUE@
-am__include = @am__include@
 am__leading_dot = @am__leading_dot@
-am__quote = @am__quote@
 bindir = @bindir@
 build = @build@
 build_alias = @build_alias@
@@ -123,6 +112,7 @@ build_cpu = @build_cpu@
 build_os = @build_os@
 build_vendor = @build_vendor@
 datadir = @datadir@
+enable_dependency_tracking = @enable_dependency_tracking@
 enable_pheaders = @enable_pheaders@
 enabled_icon_themes = @enabled_icon_themes@
 exec_prefix = @exec_prefix@
@@ -156,8 +146,10 @@ target_vendor = @target_vendor@
 subdir = varia
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 mkinstalldirs = $(SHELL) $(top_srcdir)/admin/mkinstalldirs
-CONFIG_HEADER = $(top_builddir)/kadu-config.h
+CONFIG_HEADER = $(top_builddir)/kadu-config.tmp
 CONFIG_CLEAN_FILES =
+depcomp =
+am__depfiles_maybe =
 DIST_SOURCES =
 DIST_COMMON = $(srcdir)/Makefile.in Makefile.am
 all: all-am
